<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:background="@color/surface">

    <ImageView
        android:id="@+id/image_character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="10dp"
        android:contentDescription="@string/character_image"
        android:src="@drawable/img_character"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_title"
        style="@style/Body.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_qurio_explorer"
        android:textColor="@color/shade_secondary"
        app:layout_constraintStart_toEndOf="@+id/image_character"
        app:layout_constraintTop_toTopOf="@+id/image_character" />

    <TextView
        android:id="@+id/text_character_name"
        style="@style/Label.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/shade_primary"
        app:layout_constraintBottom_toBottomOf="@+id/image_character"
        app:layout_constraintStart_toStartOf="@+id/text_title"
        app:layout_constraintTop_toBottomOf="@+id/text_title"
        tools:text="Rika" />

    <ImageView
        android:id="@+id/icon_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/icon_settings"
        android:src="@drawable/img_home_settings"
        app:layout_constraintBottom_toBottomOf="@+id/image_character"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_character" />

</androidx.constraintlayout.widget.ConstraintLayout>