<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/surface"
        app:cardCornerRadius="16dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/shade_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_streak"
                android:layout_width="48dp"
                android:layout_height="70dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/image_streak"
                android:scaleType="centerCrop"
                android:src="@drawable/img_fire"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_streak_title"
                style="@style/Label.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/streak_title"
                android:textColor="@color/shade_primary"
                app:layout_constraintStart_toEndOf="@+id/img_streak"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread_inside" />

            <TextView
                android:id="@+id/text_streak_subtitle"
                style="@style/Label.XSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/every_day_count"
                android:textColor="@color/shade_secondary"
                app:layout_constraintStart_toEndOf="@+id/img_streak"
                app:layout_constraintTop_toBottomOf="@+id/text_streak_title" />

            <RatingBar
                android:id="@+id/streak_progress_bar"
                style="@style/CustomRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:numStars="7"
                android:stepSize="0.5"
                app:layout_constraintBottom_toTopOf="@+id/text_sunday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_streak"
                app:layout_constraintTop_toBottomOf="@+id/text_streak_subtitle" />

            <TextView
                android:id="@+id/text_sunday"
                style="@style/Label.XSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="7dp"
                android:text="S"
                android:textColor="@color/shade_tertiary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text_monday"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/img_streak" />

            <TextView
                android:id="@+id/text_monday"
                style="@style/Label.XSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="M"
                android:textColor="@color/shade_tertiary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text_tuesday"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_sunday" />

            <TextView
                android:id="@+id/text_tuesday"
                style="@style/Label.XSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="T"
                android:textColor="@color/shade_tertiary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text_wednesday"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_monday" />

            <TextView
                android:id="@+id/text_wednesday"
                style="@style/Label.XSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="W"
                android:textColor="@color/shade_tertiary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text_thursday"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_tuesday" />

            <TextView
                android:id="@+id/text_thursday"
                style="@style/Label.XSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="Th"
                android:textColor="@color/shade_tertiary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text_friday"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_wednesday" />

            <TextView
                android:id="@+id/text_friday"
                style="@style/Label.XSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="F"
                android:textColor="@color/shade_tertiary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text_saturday"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_thursday" />

            <TextView
                android:id="@+id/text_saturday"
                style="@style/Label.XSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="S"
                android:textColor="@color/shade_tertiary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/text_friday" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>